<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, StudentApp!</string>
    <string name="app_name">Student App</string>
<string name="addCourse">I\'m taking this</string>
<string name="addPractical">Add a Practical</string>
<string name="Practicals">Practicals</string>
<string name="NoPracticals">No practicals?! Clearly you must be mistaken.</string>
<string name="Lectures">Lectures</string>
<string name="AdditionalInfo">AdditionalInfo</string>
<string name="AllIn">all in</string>
<string name="first">first</string>
<string name="second">second</string>
<string name="semester">semester</string>
<string name="IAmTakingThis">I\'m taking this!</string>
<string name="IAmNotTakingThis">I\'m not taking this!</string>
<string name="Level">Level</string>
<string name="FirstMeeting">FirstMeeting</string>
<string name="Location">Location</string>
<string name="College">College</string>
<string name="School">School</string>
<string name="SubjectArea">SubjectArea</string>
<string name="Organizer">Organizer</string>
<string name="Secretary">Secretary</string>
<string name="SpecialArrangements">Special Arrangements</string>
<string name="Course">Course</string>
<string name="Courses">Courses</string>
<string name="Title">Title</string>
<string name="Due">Due</string>
<string name="DueTime">Due Time</string>
<string name="Notes">Notes</string>
<string name="Save">Save</string>
<string name="Edit">Edit</string>
<string name="Delete">Delete</string>
<string name="For">For</string>
<string name="Completed">Completed</string>
<string name="PracticalsEndingSoon">Practicals ending soon</string>
<string name="LecturesToday">Lectures today</string>
<string name="NoCourseSelected">You have not selected any courses!</string>

<string name="Taking">Taking</string>
<string name="Schedule">Schedule</string>
<string name="NoTasksSoon">You have no tasks soon! You can relax...</string>
<string name="CantCreatePractical">You need to have at least one course added to Taking to create practical</string>
<string name="overdue">Overdue!</string>
<string name="NoLecturesToday">You have no lectures today!</string>
<string name="CourseCannotBeRemoved">Course cannot be removed!</string>
<string name="WhatNext">What do you want to do next?</string>
<string name="GoTaking">Go to Taking</string>
<string name="StayHere">Stay here</string>
<string name="CourseCannotBeSelected">Course cannot be selected, clashes found! Are you sure you are taking this? Check Taking tab to be sure or contact your DoS</string>
<string name="PracticalNotSaved">Practical cannot be saved</string>
<string name="DueDateShouldBeInFuture">Due date must be in a future</string>
<string name="TitleRequired">Title is needed</string>
<string name="HaveCompleted">I have completed this!</string>
<string name="HaventCompleted">I haven\'t completed this!</string>
</resources>
