<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <TableLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Course"/>
        </TableRow>
        <TableRow>
            <Spinner android:layout_height="wrap_content"
                     android:layout_width="fill_parent"
                     android:layout_weight="1"
                     android:id="@+id/courses"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Title"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/title"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/Due"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/due"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/DueTime"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/time"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/Notes"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <EditText android:id="@+id/notes"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:id="@+id/save"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</ScrollView>